--- a/public/css/scan.css
+++ b/public/css/scan.css
@@ -1,47 +1,70 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    overflow: hidden;
-    width: 100vw;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #090E11;
 }
 
-.cam-design-wrapper {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
+nav.navbar {
+    background-color: #1F2C34 !important;
+    z-index: 20;
+    position: relative;
 }
 
-.cam-vid-wrapper {
-    position: absolute;
+#scan-instruction {
+    background-color: #121B22;
+    color: #808A93;
+    font-size: 20px;
+    text-align: center;
+    padding: 15px;
+    z-index: 20;
+    position: relative;
+}
+
+#content-wrapper {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: end;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #090E11 !important;
 }
 
-.bottom-capt {
-    background-color: rgb(51, 51, 51);
-    color: white;
-    position: absolute;
-    height: 220px;
-    width: 100%;
-    bottom: 0;
+#camera-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
+    height: 70vh;
     justify-content: center;
-    z-index: 10;
 }
 
-.cam-frame {
-    background: url('../img/fame_scan/picframe.png') no-repeat;
-    background-size: cover;
-    background-position: 0px -30px;
-    color: white;
+#camera-wrapper video {
+    border: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+video {
     position: absolute;
-    height: 570px;
-    width: 100%;
     top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    left: 0;
+    z-index: 0;
+}
+
+.scan-area {
+    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.2);
+    width: 290px;
+    height: 290px;
+    border-radius: 15px;
+    position: relative;
+    z-index: 10;
+    background: linear-gradient(to right, #10796b 4px, transparent 4px) 0 0, linear-gradient(to right, #10796b 4px, transparent 4px) 0 100%, linear-gradient(to left, #10796b 4px, transparent 4px) 100% 0, linear-gradient(to left, #10796b 4px, transparent 4px) 100% 100%, linear-gradient(to bottom, #10796b 4px, transparent 4px) 0 0, linear-gradient(to bottom, #10796b 4px, transparent 4px) 100% 0, linear-gradient(to top, #10796b 4px, transparent 4px) 0 100%, linear-gradient(to top, #10796b 4px, transparent 4px) 100% 100%;
+    background-repeat: no-repeat;
+    background-size: 40px 40px;
+    animation: kida 1s linear infinite alternate;
+}
+
+@keyframes kida {
+    0% {
+        filter: brightness(70%);
+    }
+    100% {
+        filter: brightness(300%);
+    }
 }
