--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -209,7 +209,7 @@ body {
     overflow-y: auto;
     width: 956.2px;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: end;
     height: 100vh;
 }
